--- a/intRo1 basics.qmd
+++ b/intRo1 basics.qmd
@@ -2,6 +2,7 @@
 title: "1: The basics"
 subtitle: "Introduction to R for health data"
 author: Andrea Mazzella [(GitHub)](https://github.com/andreamazzella)
+editor: visual
 ---
 
 ------------------------------------------------------------------------
@@ -10,7 +11,7 @@ author: Andrea Mazzella [(GitHub)](https://github.com/andreamazzella)
 
 -   User interface
 -   Console
--   R Markdown notebooks
+-   R Markdown documents
 -   Assignment
 -   Functions
 -   Datasets
@@ -26,7 +27,7 @@ The RStudio interface is divided into four parts:
 |--------------|-----------------------|
 | Console      | Files, packages, help |
 
--   *top left*: the code script or notebook you're working on (like this one: `intRo1 basics.Rmd`).
+-   *top left*: the code script or notebook you're working on (like this one: `intRo1 basics.qmd`).
 -   *bottom left*: the console (where you can input your commands)
 -   *top right*: Environment (where your datasets and other "objects" are stored)
 -   *bottom right*: help (and other stuff)
@@ -49,12 +50,12 @@ Now forget about the console -- it's better to keep your code in a notebook (or 
 
 ------------------------------------------------------------------------
 
-# R Notebooks (.Rmd)
+# R Markdown documents (.qmd, .Rmd)
 
-A notebook, like this one (`intRo1 basics.Rmd`) is composed of two things:
+A Markdown document, like this one (`intRo1 basics.qmd`) is composed of two things:
 
 -   Text, which is the main component
--   "Chunks", which contain code (and comments, which are preceded by a hash symbol, \#)
+-   "Chunks", which contain code (and comments, which are preceded by a hash symbol, #)
 
 A chunk looks like this:
 
@@ -62,7 +63,7 @@ A chunk looks like this:
 
 ```
 
-Please note that those three signs are not normal apostrophes ('): they are "backticks" (\`). On a UK/US Windows keyboard and US Mac keyboard, the key is to the left of the number 1. On a UK Mac keyboard, the key is to the left of Z.
+A Markdown document can be opened in Visual mode (like this one) or in Source mode. Visual mode will have nicer formatting of the text outside of the code chunks.
 
 To **run all the code in a chunk**, you click on the green triangle button at the top right of the chunk (or you place your cursor inside it and press on Windows `Ctrl` + `Shift` + `Enter`; on Mac: `⌘` + `⌥` + `Enter`.
 
@@ -88,13 +89,13 @@ pi * 1.4 ^2
 
 To add a new chunk, you can:
 
-- go to the toolbar, click `Code` → `Insert Chunk`.
-- go to the top right of the window, click on an icon with a green `+c` → `R`
-- use a keyboard shortcut
-   -   Mac:` ⌘` + `⌥` + `I`
-   -   Windows, US keyboard: `Ctrl` + `Alt` + `I`
-   -   Windows, any other keyboard: this needs resetting - go to the toolbar, `Tools` → `Modify Keyboard Shortcuts...` → type `insert chunk` in the `Filter` field → click on the shortcut area → press `Ctrl` + `Shift` + `I`.
-- you could potentially type the three backticks followed by `{r}` and close the chunk with three more backticks, but why would you?
+-   go to the toolbar, click `Code` → `Insert Chunk`.
+-   go to the top right of the window, click on an icon with a green `+c` → `R`
+-   use a keyboard shortcut
+    -   Mac:`⌘` + `⌥` + `I`
+    -   Windows, US keyboard: `Ctrl` + `Alt` + `I`
+    -   Windows, any other keyboard: this needs resetting - go to the toolbar, `Tools` → `Modify Keyboard Shortcuts...` → type `insert chunk` in the `Filter` field → click on the shortcut area → press `Ctrl` + `Shift` + `I`.
+-   you could potentially type the three backticks followed by `{r}` and close the chunk with three more backticks, but why would you?
 
 *Exercise 4.* Add a new chunk in the space below, and use it to divide 6 by 2.
 
@@ -108,8 +109,8 @@ We won't be using R scripts in this course, but you might see them elsewhere.
 
 To create a new R script, you can:
 
-- go to the toolbar: `File` → `New File` → `R Script`
-- use a keyboard short-cut: `Ctrl` + `Shift` + `N` on Windows.
+-   go to the toolbar: `File` → `New File` → `R Script`
+-   use a keyboard short-cut: `Ctrl` + `Shift` + `N` on Windows.
 
 ------------------------------------------------------------------------
 
@@ -157,8 +158,8 @@ sqrt(64)
 
 *Exercise 7.*
 
-1. Create a new chunk below
-2. Use it to calculate the natural logarithm of 100.
+1.  Create a new chunk below
+2.  Use it to calculate the natural logarithm of 100.
 
 ------------------------------------------------------------------------
 
@@ -233,15 +234,14 @@ In R, a **vector** is a list of objects of the same type, in a specific order. F
 Of note, every column in a dataframe is a vector!
 
 You create a vector using function `c()`, which stands for "combine":
+
 ```{r}
 c(5, 2, 4)
 
 c("cirrhosis", "fibrosis", "hepatitis")
 ```
 
-Vectors are used:
-- when the argument of a function needs to contain more than one element,
-- when we want to apply a function to more than one object.
+Vectors are used: - when the argument of a function needs to contain more than one element, - when we want to apply a function to more than one object.
 
 ```{r}
 # A function that will summarise all elements of a vector
@@ -252,11 +252,13 @@ log(c(100, 10))
 ```
 
 Why do you think the output of the chunk above is different to the below?
+
 ```{r}
 log(100, 10)
 ```
 
 Objects in a vector can have names:
+
 ```{r}
 c("age" = 19, "height" = 185, "systolic_BP" = 132)
 ```
@@ -281,7 +283,6 @@ theoph <- datasets::Theoph
 
 
 ```
-
 
 ------------------------------------------------------------------------
 
